feat: Implement media search API returning `MediaResponse` DTOs with optimized JPA query and new API definition.