@@ -1,7 +1,9 @@
 package com.tminder.infrastructure.persistence;
 
+import com.tminder.api.dto.MediaResponse;
 import com.tminder.domain.model.Media;
 import com.tminder.domain.repository.MediaRepository;
+import org.springframework.context.annotation.Profile;
 import org.springframework.stereotype.Repository;
 
 import java.util.ArrayList;
@@ -9,22 +11,24 @@ import java.util.List;
 import java.util.stream.Collectors;
 
 @Repository
+@Profile("test")
 public class InMemoryMediaRepository implements MediaRepository {
-    private final List<Media> mediaList = new ArrayList<>();
+
+    private final List<MediaResponse> mediaList = new ArrayList<>();
 
     public InMemoryMediaRepository() {
-        // Sample data for testing
-        mediaList.add(new Media("1", "The Dark Knight"));
-        mediaList.add(new Media("2", "Inception"));
-        mediaList.add(new Media("3", "Interstellar"));
-        mediaList.add(new Media("4", "The Matrix"));
-        mediaList.add(new Media("5", "Breaking Bad"));
+        mediaList.add(new MediaResponse("1", "The Dark Knight"));
+        mediaList.add(new MediaResponse("2", "Inception"));
+        mediaList.add(new MediaResponse("3", "Interstellar"));
+        mediaList.add(new MediaResponse("4", "The Matrix"));
+        mediaList.add(new MediaResponse("5", "Breaking Bad"));
     }
 
     @Override
-    public List<Media> searchByTitle(String text , String titleType) {
+    public List<MediaResponse> searchByTitle(String text, String titleType) {
         return mediaList.stream()
-                .filter(m -> m.getTitle().toLowerCase().contains(text.toLowerCase()))
-                .collect(Collectors.toList());
+                .filter(m -> m.title().toLowerCase().contains(text.toLowerCase()))
+                .limit(10)
+                .toList();
     }
 }
